# PyWinding

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
src/pywinding/: Coil.py  Helmholtz.py  Sensor.py  Testbench.py  Testbenches.py  Utility.py  __init__.py
src/pywinding/Magneto/: Magneto.py  __init__.py  commands.py
src/pywinding/power/: Testbench.py  Transmitter.py
tests/: test_Testbench.py  test_bigcoil.py  test_microcoil.py
