[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pywinding"
version = "0.0.1"
dependencies = ["pyfemm", "matplotlib", "scipy", "tqdm", "datetime"]
authors = [
  { name="Alex Jaeger", email="herman.alex.jaeger@gmail.com" },
]
description = "A tool for rapidly prototyping wound induction microcoils using Finite Element Method Magnetics (FEMM)."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/WiMag-Tracking/PyWinding"
Issues = "https://github.com/WiMag-Tracking/PyWinding/issues"