[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "pywinding"
version = "0.0.2"
dependencies = ["pyfemm", "matplotlib", "scipy", "tqdm", "sciform"]
authors = [
  { name="Alex Jaeger", email="herman.alex.jaeger@gmail.com" },
    { name="Cian O Donnell", email="cian.odonnell@tyndall.ie" },
]
description = "A tool for rapidly prototyping wound induction microcoils using Finite Element Method Magnetics (FEMM)."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/WiMag-Tracking/PyWinding"
Issues = "https://github.com/WiMag-Tracking/PyWinding/issues"