[metadata]
name = pywinding
version = attr: pywinding.__version__
author = Alexander Jaeger, Cian Ó Domhnaill
author_email = alexander.jaeger@tyndall.ie
description = Automated parameter extraction for micro coil designs
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/WiMag-Tracking/PyWinding
project_urls =
    Bug Tracker = https://github.com/WiMag-Tracking/PyWinding/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.4
setup_requires = 
    numpy
    scipy
    matplotlib
    pyfemm
    tqdm
install_requires = 
    numpy
    scipy
    matplotlib
    pyfemm
    tqdm
    
[options.packages.find]
where = src
